Thu Dec 04 11:33:46 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Initialize the variable idletag, since it is tested in 
	  silc_core_deinit for its default value.  Affected file
	  irssi/src/silc/core/silc-core.c

Sun Nov 30 19:47:02 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Fixed signed channel messages across cells. Affected file
	  silcd/packet_send.c

Fri Nov 28 19:13:21 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Changed the SILC_LOG_* macros to not be empty if SILC_DEBUG
	  is not defined.  They can now be safely used in if-statements
	  without braces.  Affected file lib/silcutil/silclog.h.

	* Added the checks for backup closing connection due to error
	  (local or remote) and thus not allow the resuming to occur
	  in reconnect.  Affected files are silcd/packet_send.c
	  and server.c.

Tue Nov 25 15:20:59 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Help file updates.  Affected files in irssi/src/docs/help/in/.

Wed Nov 23 20:51:21 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Fixed channel messages across cells. Affected file
	  silcd/packet_send.c

Wed Nov 12 11:34:56 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed file transmission accepting in client library to not
	  start the negotiation if user hasn't accepted the transfer,
	  instead create new session for resent transfer.  Affected
	  file lib/silcclient/client_ftp.c.

	* Show the session ID in the file transmision list.  Remove
	  session from list that failed to transfer.  Switch the current
	  session automatically after transmission, and in errors, to new
	  session if other sessions exists in the transfer list.  Affected
	  files are irssi/src/silc/core/silc-servers.c,
	  irssi/src/fe-common/silc/modfule-formats.c.

Mon Nov 10 14:41:40 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Fixed MIME header parsing for the hopefully last time.  Affected
	  file lib/silcutil/silcstrutil.c
